--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,15 @@
 .container{
 	width: 1340px;
 	margin: 0 auto;
-	padding-left: 15px;
-	padding-right: 15px;
 }
 .flex-banner{
-	display: flex;
-	flex: 0 0 auto;
-	margin-left: -15px;
-	margin-right: -15px;
-	padding-left: 15px;
-	padding-right: 15px;
 	justify-content: space-around;
+}
+.flex-banner1{
+	justify-content: center;
 }
 .flex-container{
 	display: flex;
-	flex: 0 0 auto;
 	flex-wrap: nowrap;
 	margin-left: -15px;
 	margin-right: -15px;
@@ -28,32 +22,13 @@
 	padding-right: 15px;
 }
 .flex-portfolio{
-	display: flex;
-	flex: 0 0 auto;
 	flex-wrap: wrap;
-	margin-left: -15px;
-	margin-right: -15px;
-	padding-left: 15px;
-	padding-right: 15px;
 	justify-content: space-around;
 }
-
 .flex-header{
-	display: flex;
-	flex: 0 0 auto;
-	margin-left: -15px;
-	margin-right: -15px;
-	padding-left: 15px;
-	padding-right: 15px;
 	justify-content: space-between;
 }
 .flex-footer{
-	display: flex;
-	flex: 0 0 auto;
-	margin-left: -15px;
-	margin-right: -15px;
-	padding-left: 15px;
-	padding-right: 15px;
 	justify-content: space-around;
 }
 .flex-item1{
@@ -130,7 +105,7 @@
 }
 .header{
 	background-color: black;
-	height: 80px;
+	padding: 20px 0;
 	width: auto;
 }
 .gp{
@@ -162,8 +137,6 @@
 	background-color: black;
 	width: auto;
 	height: 200px;
-	padding: 0 200px;
-	margin-left: 500px;
 }
 .icons{
 	width: auto;
@@ -173,24 +146,24 @@
 }
 .content{
 	background-color: black;
-	height: 500px;
+	padding: 40px 0;
 	width: auto;
 }
 .para{
 	background-color: red;
 	width: auto;
-	height: 400px;
-	margin: 20px 0;
+	height: 200px;
+	margin: 40px 0;
 }
 .image{
 	background-color: red;
 	width: auto;
-	height: 400px;
+	height: 500px;
 	margin: 20px 0;
 }
 .clients{
 	background-color: red;
-	height: 150px;
+	padding: 20px 0;
 	width: auto;
 }
 .client1{
@@ -201,12 +174,12 @@
 }
 .content1{
 	background-color: black;
-	height: 500px;
+	padding: 40px 0;
 	width: auto;
 }
 .services{
 	background-color: red;
-	height: 1000px;
+	padding: 40px 0;
 	width: auto;
 }
 .service1{
@@ -225,13 +198,11 @@
 	background-color: red;
 	width: auto;
 	height: 200px;
-	margin-left: 500px;
-	padding-left: 500px;
 }
 .portfolio{
 	background-color: red;
 	width: auto;
-	height: 1750px;
+	padding: 40px 0;
 }
 .portfolio1{
 	margin: 20px 0;
@@ -243,7 +214,7 @@
 	margin: 20px 0;
 	background-color: black;
 	width: auto;
-	height: 300px;
+	height: 700px;
 }
 .portfolio3{
 	margin: 20px 0;
@@ -255,41 +226,41 @@
 	margin: 20px 0;
 	background-color: black;
 	width: auto;
-	height: 700px;
+	height: 750px;
 }
 .portfolio5{
-	margin-top: 100px;
+	margin: 20px 0;
 	background-color: black;
 	width: auto;
-	height: 700px;
+	height: 350px;
 }
 .portfolio6{
 	margin: 20px 0;
 	background-color: black;
 	width: auto;
-	height: 350px;
+	height: 300px;
 }
 .portfolio7{
 	margin: 20px 0;
 	background-color: black;
 	width: auto;
-	height: 350px;
+	height: 330px;
 }
 .portfolio8{
 	margin: 20px 0;
 	background-color: black;
 	width: auto;
-	height: 350px;
+	height: 330px;
 }
 .portfolio9{
 	margin: 20px 0;
 	background-color: black;
 	width: auto;
-	height: 350px;
+	height: 330px;
 }
 .content2{
 	background-color: black;
-	height: 500px;
+	padding: 40px 0;
 	width: auto;
 }
 .banner3{
@@ -302,11 +273,9 @@
 	background-color: black;
 	width: auto;
 	height: 200px;
-	margin-left: 500px;
-	padding-left: 500px;
 }
 .authors{
-	height: 500px;
+	padding: 40px 0;
 	background-color: black;
 	width: auto;
 }
@@ -317,7 +286,7 @@
 	margin: 20px 0;
 }
 .contact{
-	height: 1000px;
+	padding: 40px 0;
 	background-color: red;
 	width: auto;
 
@@ -328,21 +297,33 @@
 	height: 500px;
 	margin: 20px 0;
 }
-.contactdetails{
+.location{
 	width: auto;
 	background-color: black;
-	height: 400px;
+	height: 130px;
+	margin: 20px 0;
+}
+.email{
+	width: auto;
+	background-color: black;
+	height: 130px;
+	margin: 20px 0;
+}
+.call{
+	width: auto;
+	background-color: black;
+	height: 130px;
 	margin: 20px 0;
 }
 .personaldetails{
 	width: auto;
 	background-color: black;
-	height: 400px;
+	height: 420px;
 	margin: 20px 0;
 }
 .content3{
 	width: auto;
-	height: 400px;
+	padding: 40px 0;
 	background-color:black;
 }
 .gp1{
@@ -371,7 +352,7 @@
 }
 .footer{
 	background-color: red;
-	height: 80px;
+	padding: 20px 0;
 	width: auto;
 }
 .copywright{
@@ -380,5 +361,27 @@
 	height: 40px;
 	margin: 20px 0;
 }
-
+.one{
+	background-color: red;
+	width: auto;
+	height: 100px;
+	margin: 10px 0;
+}
+.two{
+	background-color: red;
+	width: auto;
+	height: 100px;
+	margin: 10px 0;
+}
+.three{
+	background-color: red;
+	width: auto;
+	height: 100px;
+	margin: 10px 0;
+}
+.four{
+	background-color:red;
+	width: auto;
+	height: 100px;
+	margin: 10px 0;
 }
